--- a/public/cars.html
+++ b/public/cars.html
@@ -8,6 +8,7 @@
     <!-- Bootstrap CSS -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <link href="./css/style.css" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/cc4dc7c7cc.js" crossorigin="anonymous"></script>
     <title>BCR - Binar Car Rental</title>
   </head>
   <body>
@@ -87,37 +88,38 @@
     
       <div class="container">
           <div class="row justify-content-center form">
-              <div class="col-2">
+              <div class="col">
                   <label for="tipeDriver">Tipe Driver</label>
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-3 tipe-driver">
                       <select class="form-select" id="tipe-driver">
-                        <option value="Pilih Sopir">Pilih Tipe Driver</option>
+                        <option value="" hidden selected>Pilih Tipe Driver</option>
+                        <option value="Pilih Sopir">Semua Mobil</option>
                         <option value="Dengan Sopir">Dengan Sopir</option>
                         <option value="Tanpa Sopir">Tanpa Sopir (Lepas Tangan)</option>
                       </select>
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col">
                   <label for="tipeDriver">Tanggal</label>
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-3 tanggal">
                       <input type="date" name="date" id="date" placeholder="Pilih Tanggal">
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col">
                   <label for="tipeDriver">Waktu Jemput/Ambil</label>
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-3 waktu">
                     <input type="time" name="name" id="time" placeholder="Pilih Waktu" >
                   </div>
               </div>
-              <div class="col-2">
+              <div class="col">
                   <label for="tipeDriver">Jumlah Penumpang (Optional)</label>
-                  <div class="input-group mb-3">
+                  <div class="input-group mb-3 penumpang">
                       <input type="number" name="penumpang" id="penumpang" placeholder="Jumlah Penumpang">
                   </div>
               </div>
-              <div class="col-2"><br>
-                <button type="submit" class="btn btn-primary mb-3 find-car" id="find-car">Cari Mobil</button>
-                <button type="submit" class="btn btn-primary mb-3 find-car" id="clear-car">Clear</button>
+              <div class="col"><br>
+                <button type="submit" class="btn mb-3 find-car" id="find-car">Cari Mobil</button>
+                <button type="submit" class="btn mb-3 clear-car" id="clear-car">Clear</button>
               </div>
             </div>
       </div>
