--- a/public/cars.html
+++ b/public/cars.html
@@ -88,7 +88,7 @@
     
       <div class="container">
           <div class="row justify-content-center form">
-              <div class="col">
+              <div class="col-md-auto">
                   <label for="tipeDriver">Tipe Driver</label>
                   <div class="input-group mb-3 tipe-driver">
                       <select class="form-select" id="tipe-driver">
@@ -99,25 +99,25 @@
                       </select>
                   </div>
               </div>
-              <div class="col">
+              <div class="col-md-auto">
                   <label for="tipeDriver">Tanggal</label>
                   <div class="input-group mb-3 tanggal">
                       <input type="date" name="date" id="date" placeholder="Pilih Tanggal">
                   </div>
               </div>
-              <div class="col">
+              <div class="col-md-auto">
                   <label for="tipeDriver">Waktu Jemput/Ambil</label>
                   <div class="input-group mb-3 waktu">
                     <input type="time" name="name" id="time" placeholder="Pilih Waktu" >
                   </div>
               </div>
-              <div class="col">
+              <div class="col-md-auto">
                   <label for="tipeDriver">Jumlah Penumpang (Optional)</label>
                   <div class="input-group mb-3 penumpang">
                       <input type="number" name="penumpang" id="penumpang" placeholder="Jumlah Penumpang">
                   </div>
               </div>
-              <div class="col"><br>
+              <div class="col-md-auto"><br>
                 <button type="submit" class="btn mb-3 find-car" id="find-car">Cari Mobil</button>
                 <button type="submit" class="btn mb-3 clear-car" id="clear-car">Clear</button>
               </div>
